# worker-storage-processor

./: .gitignore  Cargo.toml  Dockerfile  mod.rs
cmd/api/: main.rs
src/: lib.rs  mod.rs
src/aplication/service/: event_manager_service.rs  image_manager_service.rs  mod.rs
src/aplication/use_case/: event_manager_usecase.rs  mod.rs
src/cmd/api/: main.rs  mod.rs
src/core/: mod.rs
src/core/aplication/: mod.rs
src/core/domain/: mod.rs
src/core/domain/models/: message_event_model.rs  mod.rs
src/domain/: mod.rs
src/domain/errors/: config_error.rs  consumer_error.rs  handler_error.rs  media_error.rs  mod.rs  queue_error.rs  storage_error.rs
src/domain/models/: constantes_model.rs  media_status_enum.rs  message_event_model.rs  mod.rs
src/domain/ports/: mod.rs
src/domain/ports/inbound/: event_manager_usecase.rs  mod.rs  queue_handler.rs
src/domain/ports/outbound/: mod.rs  object_cache_repository.rs  object_db_repository.rs  object_storage_repository.rs
src/infraestructure/: mod.rs
src/infraestructure/adapter/: mod.rs
src/infraestructure/adapter/inbound/: mod.rs
src/infraestructure/adapter/inbound/http/: mod.rs
src/infraestructure/adapter/inbound/http/controller/: healthcheck_controller.rs  mod.rs
src/infraestructure/adapter/inbound/queue/: mod.rs  queue_handler.rs
src/infraestructure/adapter/inbound/queue/rabbitmq/: mod.rs  queue_client.rs  rabbit_adapter.rs
src/infraestructure/adapter/outbound/: mod.rs
src/infraestructure/config/: app_config.rs  mod.rs
src/infraestructure/observability/logger/: logger.rs
(+12 files in other folders)
